k8s/php-webserver/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-webserver
  labels:
    app: lingoda-demo
    role: php-webserver-deploy
    stage: dev
    version: 7.0.1
  annotations:
    author: "ciprian.bucur"
spec:
  selector:
    matchLabels:
      app: lingoda-demo
      role: php-webserver-pod
      stage: dev
      version: 7.0.1
  replicas: 1
  template:
    metadata:
      labels:
        app: lingoda-demo    
        role: php-webserver-pod
        stage: dev
        version: 7.0.1
      annotations:
        author: "ciprian.bucur"
    spec:
      nodeSelector:
        role: workers
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 33
      containers:
      - name: webserver
        image: cipribucur/lingoda-webserver:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: 250Mi
          limits:
            memory: 250Mi
        ports:
        - name: webserver-http
          containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: public
          mountPath: "/var/www/lingoda/public"
          readOnly: true
        - name: var
          mountPath: "/var/www/lingoda/var"
          readOnly: true
        - name: nginx-config
          mountPath: "/etc/nginx/templates/lingoda.conf.template"
          subPath: lingoda.conf.template
      - name: php-fpm
        image: cipribucur/lingoda-php:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: 300Mi
          limits:
            memory: 300Mi
        volumeMounts:
        - name: public
          mountPath: "/var/www/lingoda/public"
        - name: var
          mountPath: "/var/www/lingoda/var"
        - name: tmp
          mountPath: "/tmp"
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
      - name: public
        emptyDir: {}
      - name: tmp
        emptyDir:
          medium: Memory
          sizeLimit: "1Gi"
      - name: var
        persistentVolumeClaim:
          claimName: var
